--- a/web/index.html
+++ b/web/index.html
@@ -23,11 +23,11 @@
 
   <div class="row">
     <div class="col">
-      <label>Load ONNX Model</label>
+      <label>Load ONNX Model <span id="onnxDefault" class="muted"></span></label>
       <input id="onnxFile" type="file" accept=".onnx" />
     </div>
     <div class="col">
-      <label>Start Image (optional)</label>
+      <label>Start Image (optional) <span id="startDefault" class="muted"></span></label>
       <input id="startImg" type="file" accept="image/*" />
     </div>
     <div class="col">
